lib/wabt/src/prebuilt/ast-parser-gen.output
Terminals unused in grammar

   CALL_IMPORT
   INPUT
   OUTPUT


Grammar

    0 $accept: script_start "EOF"

    1 non_empty_text_list: TEXT
    2                    | non_empty_text_list TEXT

    3 text_list: %empty
    4          | non_empty_text_list

    5 quoted_text: TEXT

    6 value_type_list: %empty
    7                | value_type_list VALUE_TYPE

    8 elem_type: ANYFUNC

    9 global_type: VALUE_TYPE
   10            | "(" MUT VALUE_TYPE ")"

   11 func_type: "(" FUNC func_sig ")"

   12 func_sig: %empty
   13         | "(" PARAM value_type_list ")"
   14         | "(" PARAM value_type_list ")" "(" RESULT value_type_list ")"
   15         | "(" RESULT value_type_list ")"

   16 table_sig: limits elem_type

   17 memory_sig: limits

   18 limits: nat
   19       | nat nat

   20 type_use: "(" TYPE var ")"

   21 nat: NAT

   22 literal: NAT
   23        | INT
   24        | FLOAT

   25 var: nat
   26    | VAR

   27 var_list: %empty
   28         | var_list var

   29 bind_var_opt: %empty
   30             | bind_var

   31 bind_var: VAR

   32 labeling_opt: %empty
   33             | bind_var

   34 offset_opt: %empty
   35           | OFFSET_EQ_NAT

   36 align_opt: %empty
   37          | ALIGN_EQ_NAT

   38 instr: plain_instr
   39      | block_instr
   40      | expr

   41 plain_instr: UNREACHABLE
   42            | NOP
   43            | DROP
   44            | SELECT
   45            | BR var
   46            | BR_IF var
   47            | BR_TABLE var_list var
   48            | RETURN
   49            | CALL var
   50            | CALL_INDIRECT var
   51            | GET_LOCAL var
   52            | SET_LOCAL var
   53            | TEE_LOCAL var
   54            | GET_GLOBAL var
   55            | SET_GLOBAL var
   56            | LOAD offset_opt align_opt
   57            | STORE offset_opt align_opt
   58            | CONST literal
   59            | UNARY
   60            | BINARY
   61            | COMPARE
   62            | CONVERT
   63            | CURRENT_MEMORY
   64            | GROW_MEMORY

   65 block_instr: BLOCK labeling_opt block END labeling_opt
   66            | LOOP labeling_opt block END labeling_opt
   67            | IF labeling_opt block END labeling_opt
   68            | IF labeling_opt block ELSE labeling_opt instr_list END labeling_opt

   69 block: value_type_list instr_list

   70 expr: "(" expr1 ")"

   71 expr1: plain_instr expr_list
   72      | BLOCK labeling_opt block
   73      | LOOP labeling_opt block
   74      | IF labeling_opt value_type_list if_

   75 if_: "(" THEN instr_list ")" "(" ELSE instr_list ")"
   76    | "(" THEN instr_list ")"
   77    | expr "(" THEN instr_list ")" "(" ELSE instr_list ")"
   78    | expr "(" THEN instr_list ")"
   79    | expr expr expr
   80    | expr expr

   81 instr_list: %empty
   82           | instr instr_list

   83 expr_list: %empty
   84          | expr expr_list

   85 const_expr: instr_list

   86 func_fields: func_body
   87            | "(" RESULT value_type_list ")" func_body
   88            | "(" PARAM value_type_list ")" func_fields
   89            | "(" PARAM bind_var VALUE_TYPE ")" func_fields

   90 func_body: instr_list
   91          | "(" LOCAL value_type_list ")" func_body
   92          | "(" LOCAL bind_var VALUE_TYPE ")" func_body

   93 func_info: func_fields

   94 func: "(" FUNC bind_var_opt inline_export type_use func_info ")"
   95     | "(" FUNC bind_var_opt type_use func_info ")"
   96     | "(" FUNC bind_var_opt inline_export func_info ")"
   97     | "(" FUNC bind_var_opt func_info ")"

   98 offset: "(" OFFSET const_expr ")"
   99       | expr

  100 elem: "(" ELEM var offset var_list ")"
  101     | "(" ELEM offset var_list ")"

  102 table: "(" TABLE bind_var_opt inline_export_opt table_sig ")"
  103      | "(" TABLE bind_var_opt inline_export_opt elem_type "(" ELEM var_list ")" ")"

  104 data: "(" DATA var offset text_list ")"
  105     | "(" DATA offset text_list ")"

  106 memory: "(" MEMORY bind_var_opt inline_export_opt memory_sig ")"
  107       | "(" MEMORY bind_var_opt inline_export "(" DATA text_list ")" ")"
  108       | "(" MEMORY bind_var_opt "(" DATA text_list ")" ")"

  109 global: "(" GLOBAL bind_var_opt inline_export global_type const_expr ")"
  110       | "(" GLOBAL bind_var_opt global_type const_expr ")"

  111 import_kind: "(" FUNC bind_var_opt type_use ")"
  112            | "(" FUNC bind_var_opt func_sig ")"
  113            | "(" TABLE bind_var_opt table_sig ")"
  114            | "(" MEMORY bind_var_opt memory_sig ")"
  115            | "(" GLOBAL bind_var_opt global_type ")"

  116 import: "(" IMPORT quoted_text quoted_text import_kind ")"
  117       | "(" FUNC bind_var_opt inline_import type_use ")"
  118       | "(" FUNC bind_var_opt inline_import func_sig ")"
  119       | "(" TABLE bind_var_opt inline_import table_sig ")"
  120       | "(" MEMORY bind_var_opt inline_import memory_sig ")"
  121       | "(" GLOBAL bind_var_opt inline_import global_type ")"

  122 inline_import: "(" IMPORT quoted_text quoted_text ")"

  123 export_kind: "(" FUNC var ")"
  124            | "(" TABLE var ")"
  125            | "(" MEMORY var ")"
  126            | "(" GLOBAL var ")"

  127 export: "(" EXPORT quoted_text export_kind ")"

  128 inline_export_opt: %empty
  129                  | inline_export

  130 inline_export: "(" EXPORT quoted_text ")"

  131 type_def: "(" TYPE func_type ")"
  132         | "(" TYPE bind_var func_type ")"

  133 start: "(" START var ")"

  134 module_fields: %empty
  135              | module_fields type_def
  136              | module_fields global
  137              | module_fields table
  138              | module_fields memory
  139              | module_fields func
  140              | module_fields elem
  141              | module_fields data
  142              | module_fields start
  143              | module_fields import
  144              | module_fields export

  145 raw_module: "(" MODULE bind_var_opt module_fields ")"
  146           | "(" MODULE bind_var_opt non_empty_text_list ")"

  147 module: raw_module

  148 script_var_opt: %empty
  149               | VAR

  150 action: "(" INVOKE script_var_opt quoted_text const_list ")"
  151       | "(" GET script_var_opt quoted_text ")"

  152 assertion: "(" ASSERT_MALFORMED raw_module quoted_text ")"
  153          | "(" ASSERT_INVALID raw_module quoted_text ")"
  154          | "(" ASSERT_UNLINKABLE raw_module quoted_text ")"
  155          | "(" ASSERT_TRAP raw_module quoted_text ")"
  156          | "(" ASSERT_RETURN action const_list ")"
  157          | "(" ASSERT_RETURN_CANONICAL_NAN action ")"
  158          | "(" ASSERT_RETURN_ARITHMETIC_NAN action ")"
  159          | "(" ASSERT_TRAP action quoted_text ")"
  160          | "(" ASSERT_EXHAUSTION action quoted_text ")"

  161 cmd: action
  162    | assertion
  163    | module
  164    | "(" REGISTER quoted_text script_var_opt ")"

  165 cmd_list: %empty
  166         | cmd_list cmd

  167 const: "(" CONST literal ")"

  168 const_list: %empty
  169           | const_list const

  170 script: cmd_list

  171 script_start: script


Terminals, with rules where they appear

"EOF" (0) 0
error (256)
"(" (258) 10 11 13 14 15 20 70 75 76 77 78 87 88 89 91 92 94 95 96
    97 98 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114
    115 116 117 118 119 120 121 122 123 124 125 126 127 130 131 132
    133 145 146 150 151 152 153 154 155 156 157 158 159 160 164 167
")" (259) 10 11 13 14 15 20 70 75 76 77 78 87 88 89 91 92 94 95 96
    97 98 100 101 102 103 104 105 106 107 108 109 110 111 112 113 114
    115 116 117 118 119 120 121 122 123 124 125 126 127 130 131 132
    133 145 146 150 151 152 153 154 155 156 157 158 159 160 164 167
NAT (260) 21 22
INT (261) 23
FLOAT (262) 24
TEXT (263) 1 2 5
VAR (264) 26 31 149
VALUE_TYPE (265) 7 9 10 89 92
ANYFUNC (266) 8
MUT (267) 10
NOP (268) 42
DROP (269) 43
BLOCK (270) 65 72
END (271) 65 66 67 68
IF (272) 67 68 74
THEN (273) 75 76 77 78
ELSE (274) 68 75 77
LOOP (275) 66 73
BR (276) 45
BR_IF (277) 46
BR_TABLE (278) 47
CALL (279) 49
CALL_IMPORT (280)
CALL_INDIRECT (281) 50
RETURN (282) 48
GET_LOCAL (283) 51
SET_LOCAL (284) 52
TEE_LOCAL (285) 53
GET_GLOBAL (286) 54
SET_GLOBAL (287) 55
LOAD (288) 56
STORE (289) 57
OFFSET_EQ_NAT (290) 35
ALIGN_EQ_NAT (291) 37
CONST (292) 58 167
UNARY (293) 59
BINARY (294) 60
COMPARE (295) 61
CONVERT (296) 62
SELECT (297) 44
UNREACHABLE (298) 41
CURRENT_MEMORY (299) 63
GROW_MEMORY (300) 64
FUNC (301) 11 94 95 96 97 111 112 117 118 123
START (302) 133
TYPE (303) 20 131 132
PARAM (304) 13 14 88 89
RESULT (305) 14 15 87
LOCAL (306) 91 92
GLOBAL (307) 109 110 115 121 126
MODULE (308) 145 146
TABLE (309) 102 103 113 119 124
ELEM (310) 100 101 103
MEMORY (311) 106 107 108 114 120 125
DATA (312) 104 105 107 108
OFFSET (313) 98
IMPORT (314) 116 122
EXPORT (315) 127 130
REGISTER (316) 164
INVOKE (317) 150
GET (318) 151
ASSERT_MALFORMED (319) 152
ASSERT_INVALID (320) 153
ASSERT_UNLINKABLE (321) 154
ASSERT_RETURN (322) 156
ASSERT_RETURN_CANONICAL_NAN (323) 157
ASSERT_RETURN_ARITHMETIC_NAN (324) 158
ASSERT_TRAP (325) 155 159
ASSERT_EXHAUSTION (326) 160
INPUT (327)
OUTPUT (328)
LOW (329)


Nonterminals, with rules where they appear

$accept (75)
    on left: 0
non_empty_text_list (76)
    on left: 1 2, on right: 2 4 146
text_list (77)
    on left: 3 4, on right: 104 105 107 108
quoted_text (78)
    on left: 5, on right: 116 122 127 130 150 151 152 153 154 155 159
    160 164
value_type_list (79)
    on left: 6 7, on right: 7 13 14 15 69 74 87 88 91
elem_type (80)
    on left: 8, on right: 16 103
global_type (81)
    on left: 9 10, on right: 109 110 115 121
func_type (82)
    on left: 11, on right: 131 132
func_sig (83)
    on left: 12 13 14 15, on right: 11 112 118
table_sig (84)
    on left: 16, on right: 102 113 119
memory_sig (85)
    on left: 17, on right: 106 114 120
limits (86)
    on left: 18 19, on right: 16 17
type_use (87)
    on left: 20, on right: 94 95 111 117
nat (88)
    on left: 21, on right: 18 19 25
literal (89)
    on left: 22 23 24, on right: 58 167
var (90)
    on left: 25 26, on right: 20 28 45 46 47 49 50 51 52 53 54 55 100
    104 123 124 125 126 133
var_list (91)
    on left: 27 28, on right: 28 47 100 101 103
bind_var_opt (92)
    on left: 29 30, on right: 94 95 96 97 102 103 106 107 108 109 110
    111 112 113 114 115 117 118 119 120 121 145 146
bind_var (93)
    on left: 31, on right: 30 33 89 92 132
labeling_opt (94)
    on left: 32 33, on right: 65 66 67 68 72 73 74
offset_opt (95)
    on left: 34 35, on right: 56 57
align_opt (96)
    on left: 36 37, on right: 56 57
instr (97)
    on left: 38 39 40, on right: 82
plain_instr (98)
    on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58
    59 60 61 62 63 64, on right: 38 71
block_instr (99)
    on left: 65 66 67 68, on right: 39
block (100)
    on left: 69, on right: 65 66 67 68 72 73
expr (101)
    on left: 70, on right: 40 77 78 79 80 84 99
expr1 (102)
    on left: 71 72 73 74, on right: 70
if_ (103)
    on left: 75 76 77 78 79 80, on right: 74
instr_list (104)
    on left: 81 82, on right: 68 69 75 76 77 78 82 85 90
expr_list (105)
    on left: 83 84, on right: 71 84
const_expr (106)
    on left: 85, on right: 98 109 110
func_fields (107)
    on left: 86 87 88 89, on right: 88 89 93
func_body (108)
    on left: 90 91 92, on right: 86 87 91 92
func_info (109)
    on left: 93, on right: 94 95 96 97
func (110)
    on left: 94 95 96 97, on right: 139
offset (111)
    on left: 98 99, on right: 100 101 104 105
elem (112)
    on left: 100 101, on right: 140
table (113)
    on left: 102 103, on right: 137
data (114)
    on left: 104 105, on right: 141
memory (115)
    on left: 106 107 108, on right: 138
global (116)
    on left: 109 110, on right: 136
import_kind (117)
    on left: 111 112 113 114 115, on right: 116
import (118)
    on left: 116 117 118 119 120 121, on right: 143
inline_import (119)
    on left: 122, on right: 117 118 119 120 121
export_kind (120)
    on left: 123 124 125 126, on right: 127
export (121)
    on left: 127, on right: 144
inline_export_opt (122)
    on left: 128 129, on right: 102 103 106
inline_export (123)
    on left: 130, on right: 94 96 107 109 129
type_def (124)
    on left: 131 132, on right: 135
start (125)
    on left: 133, on right: 142
module_fields (126)
    on left: 134 135 136 137 138 139 140 141 142 143 144, on right:
    135 136 137 138 139 140 141 142 143 144 145
raw_module (127)
    on left: 145 146, on right: 147 152 153 154 155
module (128)
    on left: 147, on right: 163
script_var_opt (129)
    on left: 148 149, on right: 150 151 164
action (130)
    on left: 150 151, on right: 156 157 158 159 160 161
assertion (131)
    on left: 152 153 154 155 156 157 158 159 160, on right: 162
cmd (132)
    on left: 161 162 163 164, on right: 166
cmd_list (133)
    on left: 165 166, on right: 166 170
const (134)
    on left: 167, on right: 169
const_list (135)
    on left: 168 169, on right: 150 156 169
script (136)
    on left: 170, on right: 171
script_start (137)
    on left: 171, on right: 0


State 0

    0 $accept: . script_start "EOF"

    $default  reduce using rule 165 (cmd_list)

    cmd_list      go to state 1
    script        go to state 2
    script_start  go to state 3


State 1

  166 cmd_list: cmd_list . cmd
  170 script: cmd_list .

    "("  shift, and go to state 4

    $default  reduce using rule 170 (script)

    raw_module  go to state 5
    module      go to state 6
    action      go to state 7
    assertion   go to state 8
    cmd         go to state 9


State 2

  171 script_start: script .

    $default  reduce using rule 171 (script_start)


State 3

    0 $accept: script_start . "EOF"

    "EOF"  shift, and go to state 10


State 4

  145 raw_module: "(" . MODULE bind_var_opt module_fields ")"
  146           | "(" . MODULE bind_var_opt non_empty_text_list ")"
  150 action: "(" . INVOKE script_var_opt quoted_text const_list ")"
  151       | "(" . GET script_var_opt quoted_text ")"
  152 assertion: "(" . ASSERT_MALFORMED raw_module quoted_text ")"
  153          | "(" . ASSERT_INVALID raw_module quoted_text ")"
  154          | "(" . ASSERT_UNLINKABLE raw_module quoted_text ")"
  155          | "(" . ASSERT_TRAP raw_module quoted_text ")"
  156          | "(" . ASSERT_RETURN action const_list ")"
  157          | "(" . ASSERT_RETURN_CANONICAL_NAN action ")"
  158          | "(" . ASSERT_RETURN_ARITHMETIC_NAN action ")"
  159          | "(" . ASSERT_TRAP action quoted_text ")"
  160          | "(" . ASSERT_EXHAUSTION action quoted_text ")"
  164 cmd: "(" . REGISTER quoted_text script_var_opt ")"

    MODULE                        shift, and go to state 11
    REGISTER                      shift, and go to state 12
    INVOKE                        shift, and go to state 13
    GET                           shift, and go to state 14
    ASSERT_MALFORMED              shift, and go to state 15
    ASSERT_INVALID                shift, and go to state 16
    ASSERT_UNLINKABLE             shift, and go to state 17
    ASSERT_RETURN                 shift, and go to state 18
    ASSERT_RETURN_CANONICAL_NAN   shift, and go to state 19
    ASSERT_RETURN_ARITHMETIC_NAN  shift, and go to state 20
    ASSERT_TRAP                   shift, and go to state 21
    ASSERT_EXHAUSTION             shift, and go to state 22


State 5

  147 module: raw_module .

    $default  reduce using rule 147 (module)


State 6

  163 cmd: module .

    $default  reduce using rule 163 (cmd)


State 7

  161 cmd: action .

    $default  reduce using rule 161 (cmd)


State 8

  162 cmd: assertion .

    $default  reduce using rule 162 (cmd)


State 9

  166 cmd_list: cmd_list cmd .

    $default  reduce using rule 166 (cmd_list)


State 10

    0 $accept: script_start "EOF" .

    $default  accept


State 11

  145 raw_module: "(" MODULE . bind_var_opt module_fields ")"
  146           | "(" MODULE . bind_var_opt non_empty_text_list ")"

    VAR  shift, and go to state 23

    $default  reduce using rule 29 (bind_var_opt)

    bind_var_opt  go to state 24
    bind_var      go to state 25


State 12

  164 cmd: "(" REGISTER . quoted_text script_var_opt ")"

    TEXT  shift, and go to state 26

    quoted_text  go to state 27


State 13

  150 action: "(" INVOKE . script_var_opt quoted_text const_list ")"

    VAR  shift, and go to state 28

    $default  reduce using rule 148 (script_var_opt)

    script_var_opt  go to state 29


State 14

  151 action: "(" GET . script_var_opt quoted_text ")"

    VAR  shift, and go to state 28

    $default  reduce using rule 148 (script_var_opt)

    script_var_opt  go to state 30


State 15

  152 assertion: "(" ASSERT_MALFORMED . raw_module quoted_text ")"

    "("  shift, and go to state 31

    raw_module  go to state 32


State 16

  153 assertion: "(" ASSERT_INVALID . raw_module quoted_text ")"

    "("  shift, and go to state 31

    raw_module  go to state 33


State 17

  154 assertion: "(" ASSERT_UNLINKABLE . raw_module quoted_text ")"

    "("  shift, and go to state 31

    raw_module  go to state 34


State 18

  156 assertion: "(" ASSERT_RETURN . action const_list ")"

    "("  shift, and go to state 35

    action  go to state 36


State 19

  157 assertion: "(" ASSERT_RETURN_CANONICAL_NAN . action ")"

    "("  shift, and go to state 35

    action  go to state 37


State 20

  158 assertion: "(" ASSERT_RETURN_ARITHMETIC_NAN . action ")"

    "("  shift, and go to state 35

    action  go to state 38


State 21

  155 assertion: "(" ASSERT_TRAP . raw_module quoted_text ")"
  159          | "(" ASSERT_TRAP . action quoted_text ")"

    "("  shift, and go to state 39

    raw_module  go to state 40
    action      go to state 41


State 22

  160 assertion: "(" ASSERT_EXHAUSTION . action quoted_text ")"

    "("  shift, and go to state 35

    action  go to state 42


State 23

   31 bind_var: VAR .

    $default  reduce using rule 31 (bind_var)


State 24

  145 raw_module: "(" MODULE bind_var_opt . module_fields ")"
  146           | "(" MODULE bind_var_opt . non_empty_text_list ")"

    TEXT  shift, and go to state 43

    $default  reduce using rule 134 (module_fields)

    non_empty_text_list  go to state 44
    module_fields        go to state 45


State 25

   30 bind_var_opt: bind_var .

    $default  reduce using rule 30 (bind_var_opt)


State 26

    5 quoted_text: TEXT .

    $default  reduce using rule 5 (quoted_text)


State 27

  164 cmd: "(" REGISTER quoted_text . script_var_opt ")"

    VAR  shift, and go to state 28

    $default  reduce using rule 148 (script_var_opt)

    script_var_opt  go to state 46


State 28

  149 script_var_opt: VAR .

    $default  reduce using rule 149 (script_var_opt)


State 29

  150 action: "(" INVOKE script_var_opt . quoted_text const_list ")"

    TEXT  shift, and go to state 26

    quoted_text  go to state 47


State 30

  151 action: "(" GET script_var_opt . quoted_text ")"

    TEXT  shift, and go to state 26

    quoted_text  go to state 48


State 31

  145 raw_module: "(" . MODULE bind_var_opt module_fields ")"
  146           | "(" . MODULE bind_var_opt non_empty_text_list ")"

    MODULE  shift, and go to state 11


State 32

  152 assertion: "(" ASSERT_MALFORMED raw_module . quoted_text ")"

    TEXT  shift, and go to state 26

    quoted_text  go to state 49


State 33

  153 assertion: "(" ASSERT_INVALID raw_module . quoted_text ")"

    TEXT  shift, and go to state 26

    quoted_text  go to state 50


State 34

  154 assertion: "(" ASSERT_UNLINKABLE raw_module . quoted_text ")"

    TEXT  shift, and go to state 26

    quoted_text  go to state 51


State 35

  150 action: "(" . INVOKE script_var_opt quoted_text const_list ")"
  151       | "(" . GET script_var_opt quoted_text ")"

    INVOKE  shift, and go to state 13
    GET     shift, and go to state 14


State 36

  156 assertion: "(" ASSERT_RETURN action . const_list ")"

    $default  reduce using rule 168 (const_list)

    const_list  go to state 52


State 37

  157 assertion: "(" ASSERT_RETURN_CANONICAL_NAN action . ")"

    ")"  shift, and go to state 53


State 38

  158 assertion: "(" ASSERT_RETURN_ARITHMETIC_NAN action . ")"

    ")"  shift, and go to state 54


State 39

  145 raw_module: "(" . MODULE bind_var_opt module_fields ")"
  146           | "(" . MODULE bind_var_opt non_empty_text_list ")"
  150 action: "(" . INVOKE script_var_opt quoted_text const_list ")"
  151       | "(" . GET script_var_opt quoted_text ")"

    MODULE  shift, and go to state 11
    INVOKE  shift, and go to state 13
    GET     shift, and go to state 14


State 40

  155 assertion: "(" ASSERT_TRAP raw_module . quoted_text ")"

    TEXT  shift, and go to state 26

    quoted_text  go to state 55


State 41

  159 assertion: "(" ASSERT_TRAP action . quoted_text ")"

    TEXT  shift, and go to state 26

    quoted_text  go to state 56


State 42

  160 assertion: "(" ASSERT_EXHAUSTION action . quoted_text ")"

    TEXT  shift, and go to state 26

    quoted_text  go to state 57


State 43

    1 non_empty_text_list: TEXT .

    $default  reduce using rule 1 (non_empty_text_list)


State 44

    2 non_empty_text_list: non_empty_text_list . TEXT
  146 raw_module: "(" MODULE bind_var_opt non_empty_text_list . ")"

    ")"   shift, and go to state 58
    TEXT  shift, and go to state 59


State 45

  135 module_fields: module_fields . type_def
  136              | module_fields . global
  137              | module_fields . table
  138              | module_fields . memory
  139              | module_fields . func
  140              | module_fields . elem
  141              | module_fields . data
  142              | module_fields . start
  143              | module_fields . import
  144              | module_fields . export
  145 raw_module: "(" MODULE bind_var_opt module_fields . ")"

    "("  shift, and go to state 60
    ")"  shift, and go to state 61

    func      go to state 62
    elem      go to state 63
    table     go to state 64
    data      go to state 65
    memory    go to state 66
    global    go to state 67
    import    go to state 68
    export    go to state 69
    type_def  go to state 70
    start     go to state 71


State 46

  164 cmd: "(" REGISTER quoted_text script_var_opt . ")"

    ")"  shift, and go to state 72


State 47

  150 action: "(" INVOKE script_var_opt quoted_text . const_list ")"

    $default  reduce using rule 168 (const_list)

    const_list  go to state 73


State 48

  151 action: "(" GET script_var_opt quoted_text . ")"

    ")"  shift, and go to state 74


State 49

  152 assertion: "(" ASSERT_MALFORMED raw_module quoted_text . ")"

    ")"  shift, and go to state 75


State 50

  153 assertion: "(" ASSERT_INVALID raw_module quoted_text . ")"

    ")"  shift, and go to state 76


State 51

  154 assertion: "(" ASSERT_UNLINKABLE raw_module quoted_text . ")"

    ")"  shift, and go to state 77


State 52

  156 assertion: "(" ASSERT_RETURN action const_list . ")"
  169 const_list: const_list . const

    "("  shift, and go to state 78
    ")"  shift, and go to state 79

    const  go to state 80


State 53

  157 assertion: "(" ASSERT_RETURN_CANONICAL_NAN action ")" .

    $default  reduce using rule 157 (assertion)


State 54

  158 assertion: "(" ASSERT_RETURN_ARITHMETIC_NAN action ")" .

    $default  reduce using rule 158 (assertion)


State 55

  155 assertion: "(" ASSERT_TRAP raw_module quoted_text . ")"

    ")"  shift, and go to state 81


State 56

  159 assertion: "(" ASSERT_TRAP action quoted_text . ")"

    ")"  shift, and go to state 82


State 57

  160 assertion: "(" ASSERT_EXHAUSTION action quoted_text . ")"

    ")"  shift, and go to state 83


State 58

  146 raw_module: "(" MODULE bind_var_opt non_empty_text_list ")" .

    $default  reduce using rule 146 (raw_module)


State 59

    2 non_empty_text_list: non_empty_text_list TEXT .

    $default  reduce using rule 2 (non_empty_text_list)


State 60

   94 func: "(" . FUNC bind_var_opt inline_export type_use func_info ")"
   95     | "(" . FUNC bind_var_opt type_use func_info ")"
   96     | "(" . FUNC bind_var_opt inline_export func_info ")"
   97     | "(" . FUNC bind_var_opt func_info ")"
  100 elem: "(" . ELEM var offset var_list ")"
  101     | "(" . ELEM offset var_list ")"
  102 table: "(" . TABLE bind_var_opt inline_export_opt table_sig ")"
  103      | "(" . TABLE bind_var_opt inline_export_opt elem_type "(" ELEM var_list ")" ")"
  104 data: "(" . DATA var offset text_list ")"
  105     | "(" . DATA offset text_list ")"
  106 memory: "(" . MEMORY bind_var_opt inline_export_opt memory_sig ")"
  107       | "(" . MEMORY bind_var_opt inline_export "(" DATA text_list ")" ")"
  108       | "(" . MEMORY bind_var_opt "(" DATA text_list ")" ")"
  109 global: "(" . GLOBAL bind_var_opt inline_export global_type const_expr ")"
  110       | "(" . GLOBAL bind_var_opt global_type const_expr ")"
  116 import: "(" . IMPORT quoted_text quoted_text import_kind ")"
  117       | "(" . FUNC bind_var_opt inline_import type_use ")"
  118       | "(" . FUNC bind_var_opt inline_import func_sig ")"
  119       | "(" . TABLE bind_var_opt inline_import table_sig ")"
  120       | "(" . MEMORY bind_var_opt inline_import memory_sig ")"
  121       | "(" . GLOBAL bind_var_opt inline_import global_type ")"
  127 export: "(" . EXPORT quoted_text export_kind ")"
  131 type_def: "(" . TYPE func_type ")"
  132         | "(" . TYPE bind_var func_type ")"
  133 start: "(" . START var ")"

    FUNC    shift, and go to state 84
    START   shift, and go to state 85
    TYPE    shift, and go to state 86
    GLOBAL  shift, and go to state 87
    TABLE   shift, and go to state 88
    ELEM    shift, and go to state 89
    MEMORY  shift, and go to state 90
    DATA    shift, and go to state 91
    IMPORT  shift, and go to state 92
    EXPORT  shift, and go to state 93


State 61

  145 raw_module: "(" MODULE bind_var_opt module_fields ")" .

    $default  reduce using rule 145 (raw_module)


State 62

  139 module_fields: module_fields func .

    $default  reduce using rule 139 (module_fields)


State 63

  140 module_fields: module_fields elem .

    $default  reduce using rule 140 (module_fields)


State 64

  137 module_fields: module_fields table .

    $default  reduce using rule 137 (module_fields)


State 65

  141 module_fields: module_fields data .

    $default  reduce using rule 141 (module_fields)


State 66

  138 module_fields: module_fields memory .

    $default  reduce using rule 138 (module_fields)


State 67

  136 module_fields: module_fields global .

    $default  reduce using rule 136 (module_fields)


State 68

  143 module_fields: module_fields import .

    $default  reduce using rule 143 (module_fields)


State 69

  144 module_fields: module_fields export .

    $default  reduce using rule 144 (module_fields)


State 70

  135 module_fields: module_fields type_def .

    $default  reduce using rule 135 (module_fields)


State 71

  142 module_fields: module_fields start .

    $default  reduce using rule 142 (module_fields)


State 72

  164 cmd: "(" REGISTER quoted_text script_var_opt ")" .

    $default  reduce using rule 164 (cmd)


State 73

  150 action: "(" INVOKE script_var_opt quoted_text const_list . ")"
  169 const_list: const_list . const

    "("  shift, and go to state 78
    ")"  shift, and go to state 94

    const  go to state 80


State 74

  151 action: "(" GET script_var_opt quoted_text ")" .

    $default  reduce using rule 151 (action)


State 75

  152 assertion: "(" ASSERT_MALFORMED raw_module quoted_text ")" .

    $default  reduce using rule 152 (assertion)


State 76

  153 assertion: "(" ASSERT_INVALID raw_module quoted_text ")" .

    $default  reduce using rule 153 (assertion)


State 77

  154 assertion: "(" ASSERT_UNLINKABLE raw_module quoted_text ")" .

    $default  reduce using rule 154 (assertion)


State 78

  167 const: "(" . CONST literal ")"

    CONST  shift, and go to state 95


State 79

  156 assertion: "(" ASSERT_RETURN action const_list ")" .

    $default  reduce using rule 156 (assertion)


State 80

  169 const_list: const_list const .

    $default  reduce using rule 169 (const_list)


State 81

  155 assertion: "(" ASSERT_TRAP raw_module quoted_text ")" .

    $default  reduce using rule 155 (assertion)


State 82

  159 assertion: "(" ASSERT_TRAP action quoted_text ")" .

    $default  reduce using rule 159 (assertion)


State 83

  160 assertion: "(" ASSERT_EXHAUSTION action quoted_text ")" .

    $default  reduce using rule 160 (assertion)


State 84

   94 func: "(" FUNC . bind_var_opt inline_export type_use func_info ")"
   95     | "(" FUNC . bind_var_opt type_use func_info ")"
   96     | "(" FUNC . bind_var_opt inline_export func_info ")"
   97     | "(" FUNC . bind_var_opt func_info ")"
  117 import: "(" FUNC . bind_var_opt inline_import type_use ")"
  118       | "(" FUNC . bind_var_opt inline_import func_sig ")"

    VAR  shift, and go to state 23

    $default  reduce using rule 29 (bind_var_opt)

    bind_var_opt  go to state 96
    bind_var      go to state 25


State 85

  133 start: "(" START . var ")"

    NAT  shift, and go to state 97
    VAR  shift, and go to state 98

    nat  go to state 99
    var  go to state 100


State 86

  131 type_def: "(" TYPE . func_type ")"
  132         | "(" TYPE . bind_var func_type ")"

    "("  shift, and go to state 101
    VAR  shift, and go to state 23

    func_type  go to state 102
    bind_var   go to state 103


State 87

  109 global: "(" GLOBAL . bind_var_opt inline_export global_type const_expr ")"
  110       | "(" GLOBAL . bind_var_opt global_type const_expr ")"
  121 import: "(" GLOBAL . bind_var_opt inline_import global_type ")"

    VAR  shift, and go to state 23

    $default  reduce using rule 29 (bind_var_opt)

    bind_var_opt  go to state 104
    bind_var      go to state 25


State 88

  102 table: "(" TABLE . bind_var_opt inline_export_opt table_sig ")"
  103      | "(" TABLE . bind_var_opt inline_export_opt elem_type "(" ELEM var_list ")" ")"
  119 import: "(" TABLE . bind_var_opt inline_import table_sig ")"

    VAR  shift, and go to state 23

    $default  reduce using rule 29 (bind_var_opt)

    bind_var_opt  go to state 105
    bind_var      go to state 25


State 89

  100 elem: "(" ELEM . var offset var_list ")"
  101     | "(" ELEM . offset var_list ")"

    "("  shift, and go to state 106
    NAT  shift, and go to state 97
    VAR  shift, and go to state 98

    nat     go to state 99
    var     go to state 107
    expr    go to state 108
    offset  go to state 109


State 90

  106 memory: "(" MEMORY . bind_var_opt inline_export_opt memory_sig ")"
  107       | "(" MEMORY . bind_var_opt inline_export "(" DATA text_list ")" ")"
  108       | "(" MEMORY . bind_var_opt "(" DATA text_list ")" ")"
  120 import: "(" MEMORY . bind_var_opt inline_import memory_sig ")"

    VAR  shift, and go to state 23

    $default  reduce using rule 29 (bind_var_opt)

    bind_var_opt  go to state 110
    bind_var      go to state 25


State 91

  104 data: "(" DATA . var offset text_list ")"
  105     | "(" DATA . offset text_list ")"

    "("  shift, and go to state 106
    NAT  shift, and go to state 97
    VAR  shift, and go to state 98

    nat     go to state 99
    var     go to state 111
    expr    go to state 108
    offset  go to state 112


State 92

  116 import: "(" IMPORT . quoted_text quoted_text import_kind ")"

    TEXT  shift, and go to state 26

    quoted_text  go to state 113


State 93

  127 export: "(" EXPORT . quoted_text export_kind ")"

    TEXT  shift, and go to state 26

    quoted_text  go to state 114


State 94

  150 action: "(" INVOKE script_var_opt quoted_text const_list ")" .

    $default  reduce using rule 150 (action)


State 95

  167 const: "(" CONST . literal ")"

    NAT    shift, and go to state 115
    INT    shift, and go to state 116
    FLOAT  shift, and go to state 117

    literal  go to state 118


State 96

   94 func: "(" FUNC bind_var_opt . inline_export type_use func_info ")"
   95     | "(" FUNC bind_var_opt . type_use func_info ")"
   96     | "(" FUNC bind_var_opt . inline_export func_info ")"
   97     | "(" FUNC bind_var_opt . func_info ")"
  117 import: "(" FUNC bind_var_opt . inline_import type_use ")"
  118       | "(" FUNC bind_var_opt . inline_import func_sig ")"
